fix(global): hid vertical nav at 1200px, updated component spacing (#2962)
* fix(global): hid vertical nav at 1200px, updated component spacing

--- a/src/patternfly/components/DataList/data-list.scss
+++ b/src/patternfly/components/DataList/data-list.scss
@@ -50,12 +50,12 @@
   // Data list item row
   --pf-c-data-list__item-row--PaddingRight: var(--pf-global--spacer--md);
   --pf-c-data-list__item-row--PaddingLeft: var(--pf-global--spacer--md);
-  --pf-c-data-list__item-row--md--PaddingRight: var(--pf-global--spacer--lg);
-  --pf-c-data-list__item-row--md--PaddingLeft: var(--pf-global--spacer--lg);
+  --pf-c-data-list__item-row--xl--PaddingRight: var(--pf-global--spacer--lg);
+  --pf-c-data-list__item-row--xl--PaddingLeft: var(--pf-global--spacer--lg);
 
-  @media screen and (min-width: $pf-global--breakpoint--md) {
-    --pf-c-data-list__item-row--PaddingRight: var(--pf-c-data-list__item-row--md--PaddingRight);
-    --pf-c-data-list__item-row--PaddingLeft: var(--pf-c-data-list__item-row--md--PaddingLeft);
+  @media screen and (min-width: $pf-global--breakpoint--xl) {
+    --pf-c-data-list__item-row--PaddingRight: var(--pf-c-data-list__item-row--xl--PaddingRight);
+    --pf-c-data-list__item-row--PaddingLeft: var(--pf-c-data-list__item-row--xl--PaddingLeft);
   }
 
   // Data list item content
@@ -123,15 +123,18 @@
   --pf-c-data-list__expandable-content-body--PaddingBottom: var(--pf-global--spacer--md);
   --pf-c-data-list__expandable-content-body--PaddingLeft: var(--pf-global--spacer--md);
   --pf-c-data-list__expandable-content-body--md--PaddingTop: var(--pf-global--spacer--lg);
-  --pf-c-data-list__expandable-content-body--md--PaddingRight: var(--pf-global--spacer--lg);
+  --pf-c-data-list__expandable-content-body--xl--PaddingRight: var(--pf-global--spacer--lg);
   --pf-c-data-list__expandable-content-body--md--PaddingBottom: var(--pf-global--spacer--lg);
-  --pf-c-data-list__expandable-content-body--md--PaddingLeft: var(--pf-global--spacer--lg);
+  --pf-c-data-list__expandable-content-body--xl--PaddingLeft: var(--pf-global--spacer--lg);
 
   @media screen and (min-width: $pf-global--breakpoint--md) {
     --pf-c-data-list__expandable-content-body--PaddingTop: var(--pf-c-data-list__expandable-content-body--md--PaddingTop);
-    --pf-c-data-list__expandable-content-body--PaddingRight: var(--pf-c-data-list__expandable-content-body--md--PaddingRight);
     --pf-c-data-list__expandable-content-body--PaddingBottom: var(--pf-c-data-list__expandable-content-body--md--PaddingBottom);
-    --pf-c-data-list__expandable-content-body--PaddingLeft: var(--pf-c-data-list__expandable-content-body--md--PaddingLeft);
+  }
+
+  @media screen and (min-width: $pf-global--breakpoint--xl) {
+    --pf-c-data-list__expandable-content-body--PaddingRight: var(--pf-c-data-list__expandable-content-body--xl--PaddingRight);
+    --pf-c-data-list__expandable-content-body--PaddingLeft: var(--pf-c-data-list__expandable-content-body--xl--PaddingLeft);
   }
 
   // Compact
